--- a/des157/styles.css
+++ b/des157/styles.css
@@ -1,6 +1,6 @@
 header{
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
   font-family: amatic sc;
   margin-top:-30px;
   top: 0;
@@ -12,9 +12,10 @@ header h2{
   font-family: big caslon;
   font-size: 20px;
   margin-top:-30px;
-  padding: 10px;
+  padding: 8px;
   background-color: rgb(209, 252, 227);
   border-top: 5px dotted rgb(170, 6, 6);
+  border-bottom: 8px dotted rgb(102, 124, 221);
 }
 main {
   padding-right: 30px;
@@ -54,7 +55,7 @@ section ol li a, ul li a {
 }
 section ol li,  ul li{
   list-style-type: none;
- 
+  margin-bottom: 0px;
   text-align: center;
   position: relative;
 }
@@ -67,20 +68,36 @@ section, #final, #rd {
   justify-content: space-between;
   padding: 10px;
 }
+
 footer{
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 15px;
   padding-left:50px;
   padding-right: 50px;
-  margin-top:-40px;
+  margin-top:-5px;
   color: white;
 
+}
+footer a{
+  text-decoration: none;
+  font-family: amatic sc;
+  font-size: 20px;
+  color: white;
+  border-radius: 20%;
+  border: 2px dotted rgb(241, 7, 7); 
+  padding:3px;
+  padding-top: 0px;
+}
+footer a:hover{
+  color: black;
+  background-color: rgb(151, 184, 245);
 }
 #banner{
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  margin-top:-20px;
 }
 #b1, #b3, #b5{
   width: 100px;
@@ -131,7 +148,7 @@ footer{
 @media only screen and (min-width: 900px) {
   header{
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     font-family: amatic sc;
     margin-top:-30px;
     top: 0;
@@ -142,7 +159,7 @@ footer{
   header h2{
     font-family: big caslon;
     font-size: 20px;
-    margin-top:-30px;
+    margin-top:-32px;
     background-color: rgb(211, 253, 211);
     border-top: 8px dotted rgb(216, 10, 10);
   }
@@ -180,7 +197,7 @@ footer{
     font-size: 18px;
     color: rgb(4, 17, 15);
     border: 2.2px dotted rgb(0, 0, 0);
-    padding: 2px;
+    padding: 3px;
     display: block;
     margin-bottom: 2px;
     background-color: rgb(219, 255, 221);
@@ -189,7 +206,7 @@ footer{
   }
   section ol li,  ul li{
     list-style-type: none;
-   
+    margin-bottom: 1px;
     text-align: center;
     position: relative;
   }
@@ -204,11 +221,26 @@ footer{
   }
   footer{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-end;
+    gap: 15px;
     padding-left:50px;
     padding-right: 50px;
     margin-top:-30px;
     color: white;
   
-  }}
+  }
+  footer a{
+    text-decoration: none;
+    font-family: amatic sc;
+    font-size: 22px;
+    color: white;
+    border-radius: 20%;
+    border: 2px dotted rgb(241, 7, 7); 
+    padding:3px;
+    padding-top: 0px;
+  }
+  footer a:hover{
+    color: black;
+    background-color: rgb(151, 184, 245);
+  }
+}
