--- a/des157/madlibs/styles.css
+++ b/des157/madlibs/styles.css
@@ -1,13 +1,43 @@
 form{
   width: 200px;
-  display: grid;
-  background-color: rgb(230, 229, 228);
-  padding: 10px;
+  padding: 0px;
   font-family: khand;
-  border-radius: 5px;
-}
-label{
+  border-radius: 7px;
+  position: absolute;
+  top:45%;
+  left: 48%; 
+  transform: translate(-50%, -50%); 
+  text: space-between;
   display: grid;
+  font-weight: bold;
+  font-weight: 10px;
+}
+form #submit{
+  font-family: khand;
+  position: absolute;
+  font-size: 15px;
+  top:105%;
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  border: dotted 1.5px rgb(0, 0, 0);
+  border-radius: 2px;
+  background-color: rgb(219, 219, 218);
+  color: black;
+  font-weight: bold;
+}
+input{
+  font-family: 'Times New Roman', Times, serif;
+}
+#submit:hover{
+  background-color: rgb(255, 214, 230);
+}
+
+label{
+  display: flex;
+}
+input{
+  border: dotted black 1.5px;
+  border-radius: 2px;
 }
 
 main{
@@ -19,10 +49,6 @@ body{
   z-index: -1;
 }
 
-#submit{
-  margin-top: 10px;
-
-}
 h1{
   text-align: center;
   font-size: 70px;
@@ -30,12 +56,13 @@ h1{
   margin-bottom: 5px;
   margin-top: 5px;
 }
+
 input:hover {
   background-color: rgb(253, 197, 239);
 }
 div img{
   position: absolute;
-  top:51%;
+  top:53%;
   left: 50%; 
   transform: translate(-50%, -50%); 
   z-index:-1;
@@ -45,7 +72,7 @@ div img{
 #girl{
   position: absolute;
   top:80%;
-  left: 15%; 
+  left: 10%; 
   transform: translate(-50%, -50%); 
 }
 .hidden {
@@ -67,18 +94,32 @@ article{
   color: black;
   font-size: 20px;
   font-family: khand;
-  background-color: rgb(229, 238, 234);
   padding: 20px;
+  font-weight: bolder;
   border: dotted 5px pink;
+  border-radius: 10%;
   display: center;
   top:51%;
   left: 48%; 
   transform: translate(-50%, -50%); 
-
-
 }
 
-
 footer{
-  
+  position: absolute;
+  top:91%;
+  left: 10%; 
+  transform: translate(-50%, -50%); 
+  font-family: khand;
+}
+footer a {
+  background-color: rgb(255, 255, 177);
+  border-radius: 2px;
+  padding: 3px;
+  border: dotted 1px;
+  margin-right: 10px;
+  color:black;
+  text-decoration: none;
+}
+footer a:hover{
+  background-color: rgb(253, 109, 90);
 }
