--- a/des157/lj/styles.css
+++ b/des157/lj/styles.css
@@ -3,8 +3,10 @@ body{
 }
 div{
   display: flex;
-  /* justify-content: space-between 100px; */
+  flex-wrap: wrap;
   justify-content: space-around;
+  padding: 20px;
+  margin-bottom: 20px;
   
   
 }
@@ -41,10 +43,37 @@ article  {
   padding: 20px;
   border-radius: 5px;
   border: 5px dotted rgb(245, 28, 111);
+  margin-bottom: 50px;
+  font-size: 16px;
 }
 #s{
   font-family: amatic sc;
   font-weight: bolder;
   margin-top: -10px;
 }
+a{
+  /* font-family: amatic sc; */
+  font-weight: bolder;
+  margin-top: -10px;
+  color: rgb(170, 33, 56);
+ /*  font-size: 18px; */
+}
+a:hover{
+  color: rgb(30, 148, 89);
+  
+}
+footer {
+}
+footer a{
+  font-family: amatic sc;
+  font-size:large;
+  padding: 5px;
+  text-decoration: none;
+  background-color: rgb(221, 235, 193);
+  border-radius: 2px;
+  border: dotted 2px red;
+  margin-right: 20px;
+  margin-top: -100px;
+}
+
 
