--- a/des157/lj/styles.css
+++ b/des157/lj/styles.css
@@ -1,5 +1,5 @@
 body{
-  background: black;
+  background: rgb(41, 41, 41);
 }
 div{
   display: flex;
@@ -15,13 +15,15 @@ img{
 }
 header h1{
   text-align: center;
-  background-image: linear-gradient(white, rgb(248, 113, 165));
-  font-size: 40px;
+  font-size: 50px;
   font-family: amatic sc;
+  font-weight: 200;
   margin-top:0px;
   top: 0;
-  background-color: rgb(255, 160, 177);
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+  border-bottom: rgb(255, 15, 67) dotted 4px;
+  border-radius: 5px;
 
 }
 article h2 {
@@ -37,19 +39,23 @@ article h2 {
 article h3{
   margin-top:-20px;
 }
+article:hover{
+  background-color: rgb(255, 255, 255);
+  border: 9px dotted rgb(247, 43, 87);
+}
 article {
   text-align: center;
   display: center;
   width: 50%;
   text-align: justify;
-  background-color: rgb(238, 248, 237);
+  background-color: rgb(255, 255, 255);
   padding: 20px;
   border-radius: 5px;
-  border: 5px dotted rgb(245, 28, 111);
+  border: 9px dotted rgb(255, 8, 201);
   margin-bottom: 50px;
   font-size: 16px;
-  font-family: khand;
-  font-weight: bolder;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 300;
 }
 article p{
   margin: 30px;
@@ -76,16 +82,22 @@ a{
 }
 a:hover{
   color: rgb(30, 148, 89);
+  background-color: white;
   
 }
 footer {
+  position: absolute;
+  top: 40px;
+  left: 100px; 
+  transform: translate(-50%, -50%); 
 }
 footer a{
   font-family: amatic sc;
   font-size:large;
   padding: 5px;
   text-decoration: none;
-  background-color: rgb(221, 235, 193);
+  background-color: rgb(247, 190, 255);
+  color: rgb(0, 0, 0);
   border-radius: 2px;
   border: dotted 2px red;
   margin-right: 20px;
