--- a/des157/final/styles.css
+++ b/des157/final/styles.css
@@ -33,10 +33,11 @@ img:hover{
   transform: scale(1.01);
   box-shadow: 0px 0px 5px rgb(51, 0, 61);
 }
-figcaption{
+figure figcaption{
   font-family: amatic sc;
   font-weight: bolder;
   color: purple;
+  padding-top: -20px;
 
 }
 footer a{
