--- a/des157/studio3/styles.css
+++ b/des157/studio3/styles.css
@@ -40,11 +40,39 @@ div {
 
 #gamecontrol, #score {
   background-color: aliceblue;
+  position: absolute;
+  top: 700px;
+  left: 250px;
 }
-
+#score{
+  position: absolute;
+  top: 500px;
+  left: 250px;
+}
 #game {
   background-color:#eaeaea;
+  position: absolute;
+  top: 100px;
+  left: 250px;
 }
 #actions {
   background-color: silver;
+  position: absolute;
+  top: 300px;
+  left: 250px;
+}
+div{
+  width: 50%;
+  display: center;
+}
+
+#pig1-container{
+  position: absolute;
+  top: 100px;
+  left: 50px;
+}
+#pig2-container{
+  position: absolute;
+  top: 100px;
+  right: 50px;
 }
