--- a/des157/studio3/styles.css
+++ b/des157/studio3/styles.css
@@ -4,21 +4,19 @@ body {
   padding: 50px;
   line-height: 1.5em;
   display: center;
+  background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(251, 227, 255));
+}
+p{
+  font-family: Geneva;
+  margin: 0px;
 }
 h1{
   font-family: marvin round;
-  color: rgb(255, 80, 109);
+  color: rgb(255, 113, 113);
   font-size: 40px;
-  margin-top: -10px;
+  margin-top: -30px;
   text-align: center;
   
-}
-body p{
-  background-color: rgb(255, 223, 227);
-  border-radius: 5px;
-  padding: 10px;
-  text-align: justify;
-  width:  50%;
 }
 
 h2{
@@ -28,38 +26,42 @@ h2{
 button { 
   padding: 10px;
   font-family: marvin round;
-  color: grey;
+  color: rgb(253, 124, 124);
   background-color: rgb(245, 255, 252);
   border-radius: 5px;
   
+}
+button:hover{
+  color: rgb(248, 221, 226);
+  background-color: rgb(70, 68, 68);
 }
 
 div {
   padding: 20px;
 }
 
-#gamecontrol, #score {
-  background-color: aliceblue;
+#gamecontrol{
   position: absolute;
-  top: 700px;
-  left: 250px;
+  top: 300px;
+  left: 300px;
 }
 #score{
   position: absolute;
-  top: 500px;
-  left: 250px;
+  top: 600px;
+  left: 325px;
+  font-size: 27px;
+  color: rgb(255, 13, 73);
 }
 #game {
-  background-color:#eaeaea;
   position: absolute;
-  top: 100px;
-  left: 250px;
+  top: 425px;
+  left: 550px;
+  width:300px;
 }
 #actions {
-  background-color: silver;
   position: absolute;
-  top: 300px;
-  left: 250px;
+  top: 550px;
+  left: 550px;
 }
 div{
   width: 50%;
@@ -68,11 +70,36 @@ div{
 
 #pig1-container{
   position: absolute;
-  top: 100px;
+  top: 225px;
   left: 50px;
 }
 #pig2-container{
   position: absolute;
-  top: 100px;
+  top: 225px;
   right: 50px;
+}
+#rules{
+  position: absolute;
+  top: 60px;
+  left: 325px;
+  background-color: ;
+  border: dotted rgb(255, 119, 164) 2px;
+  border-radius: 5px;
+}
+footer a{
+  text-decoration: none;
+  background-color: rgb(255, 255, 255);
+  border: black dotted 1px;
+  border-radius: 2px;
+  font-family: Geneva;
+
+}
+footer a:hover{
+  background-color: rgb(255, 211, 211);
+  
+}
+footer {
+  position: absolute;
+  top: 10px;
+  left: 5px;
 }
