--- a/des157/final/finalproject/styles.css
+++ b/des157/final/finalproject/styles.css
@@ -5,57 +5,81 @@ section {
 /* Front Page */
 section:first-of-type{
   display: grid;
-  border: dotted 5px black;
+  border-top: black dotted 10px;
 }
 section:first-of-type h1{
   font-size: 60px;
-  position: absolute;
-  top: 120px;
-  left:400px;
+  margin-top: 100px;
   margin-bottom: 50px;
-  font-family: Marvin round;
-  font-weight: lighter;
+  font-family: Delius Unicase;
+  font-family: Pangolin;
+  font-weight: bolder;
   color: rgb(31, 2, 23);
-  width: 600px;
 }
 p{
   font-family: Pangolin;
-  font-size: 20px;
+  font-size: 25px;
   text-align: justify;
-  width: 450px;
   border-radius: 5px;
-  border: 3px dotted rgb(255, 33, 189);
+  border: 3px dotted rgb(253, 120, 149);
+  border-radius: 10px;
+  align-content: center;
+  width: 800px;
   position: absolute;
-  top: 325px;
-  left: 480px;
-  padding: 10px;
+  top: 200px;
+  left: 300px;
+  padding: 40px;
 }
 #paws{
   position: absolute;
-  top: 230px;
-  right: 280px;
-  image-orientation: unset;
+  top: 420px;
+  left: 700px;
+  z-index: -1;
 }
 /* first page button */
 #start{
   position: absolute;
-  top: 550px;
+  top: 440px;
   right: 650px;
   background-color: rgb(152, 199, 252);
   border-radius: 20px;
   font-size: 20px;
   padding: 20px;
-  width: 150px;
+  width: 160px;
   font-family: Pangolin;
   box-shadow: 0px 0px 10px rgb(0, 0, 0);
+  border: rgb(152, 199, 252) 5px;
   
 }
 #start:hover{
   background-color: rgb(240, 202, 231);
 }
+/* clouds */
+#cloud{
+  position: absolute;
+  z-index: -1;
+  top: -10px;
+  left: 10px;
+  animation-name: sway;
+  animation-timing-function:ease-out;
+  animation-iteration-count: 2;
+  animation-duration: 10s;
+}
+#cloud2{
+  position: absolute;
+  z-index: -1;
+  top: 550px;
+  left: 0px;
+
+}
+@keyframes sway{
+  0% { left: 1000px;}
+  50%{ left : 900px;}
+  100%{ left: 1000px;}
+}
 
 /* each mystery cat box */
-#mainly{
+#main{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 30px;
@@ -64,19 +88,63 @@ p{
   margin-left: 310px;
   margin-right: 100px;
 }
+
 .box img{
   border-radius: 5px;
   border: black solid 1px;
-
 }
+/* hover over box becomes bigger with shadow */
 .box img:hover{
   transform: scale(1.05);
   box-shadow: 0px 0px 10px rgb(0, 0, 0);
 }
-#hi{
+/* getting rid of box around speech bubble */
+.box #hi, #hello, #love, #blackhearts, #hearts, #meow{
+  border: none;
+}
+.box #hi:hover, #hello:hover, #love:hover, #blackhearts:hover, #hearts:hover, #meow:hover{
+  box-shadow: none;
+}
+/* positioning of speech bubbles */
+.box .hi {
   position: absolute;
+  left: 150px;
+  top: 200px;
+  display: none;
+}
+.box .hello {
+  position: absolute;
+  right: 150px;
   top: 100px;
-  left: 200px;
+  display: none;
+}
+.box .love {
+  position: absolute;
+  right: 150px;
+  top: 400px;
+  display: none;
+}
+.box .blackhearts {
+  position: absolute;
+  left: 550px;
+  top: 250px;
+  display: none;
+}
+.box .hearts {
+  position: absolute;
+  right: 550px;
+  top: 400px;
+  display: none;
+}
+.box .meow {
+  position: absolute;
+  left: 150px;
+  top: 430px;
+  display: none;
+}
+/* speech bubbles appear when hover over box */
+.box:hover .hi, .box:hover .hello, .box:hover .love, .box:hover .blackhearts, .box:hover .hearts, .box:hover .meow{
+  display: block;
 }
 
 footer{
@@ -101,24 +169,28 @@ footer a:hover {
 }
 
 article h3{
-  color: white;
-  font-size: 40px;
+  color: rgb(255, 101, 101);
+  font-size: 80px;
   font-family: Pangolin;
-  margin-left: 50px;
+  margin-left: 55px;
   margin-bottom:-5px;
 }
 ul li{
-  color: white;
+  color: rgb(90, 70, 70);
   font-family: Pangolin;
   width: 200px;
+  margin-left: 50px;
+  margin-top: 5px;
+  font-size: 20px;
 }
 h1{
   color: rgb(0, 0, 0);
   text-align: center;
-  font-family: marvin round;
-  margin-bottom: 20px;
+  font-family: Pangolin;
+  font-weight: 700;
+  margin-bottom: 10px;
   margin-top: 5px;
-  font-size: 35px;
+  font-size: 45px;
 }
 body{
   background-image: linear-gradient(to right, rgb(224, 212, 252) , rgb(255, 212, 242), rgb(142, 204, 255),rgb(255, 255, 255));
@@ -130,28 +202,15 @@ body{
 }
 
 .showing {
-  visibility: showing;
+  visibility: visible;
   opacity: 1;
-}
-
-.overlay {
-  position: absolute;
-  background-image: linear-gradient(to right, rgb(224, 212, 252) , rgb(255, 212, 242), rgb(142, 204, 255),rgb(255, 255, 255));
-  /* background-image: rgb(233, 188, 188); */
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  transition-property: opacity, visibility;
-  transition-duration: 1s;
-  transition-timing-function: ease;
 }
 
 .overlay article {
   box-sizing: border-box;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   padding: 20px;
-  width: 80vw;
+  width: 100vw;
   height: 100vh;
   position: absolute;
   top: 50%;
@@ -164,8 +223,9 @@ article img{
   position: absolute;
   top: 50%;
   left: 60%; 
-  width: 90;
   transform: translate(-50%, -50%); 
+  border-radius: 10px;
+  border: dotted 2px rgb(255, 35, 83);
 }
 
 .corner{
@@ -173,7 +233,7 @@ article img{
   top: 40px;
   right: 0px; 
   transform: translate(-50%, -50%); 
-  color: rgb(253, 189, 189);
+  color: rgb(221, 54, 54);
   font-size: 38px;
   background-color: transparent;
   outline: none;
@@ -183,36 +243,63 @@ article img{
 #exit1, #exit2, #exit3, #exit4, #exit5, #exit6{
   position: absolute;
   bottom: 50px;
-  left: 140px; 
+  left: 190px; 
   transform: translate(-50%, -50%); 
   font-family: Pangolin;
   font-size: 20px;
-  border: 3px dotted black;
-  border-radius: 10px;
-  background-color: rgb(255, 189, 220)
+  border: 3px solid rgb(255, 189, 220);
+  border-radius: 2px;
+  background-color: rgb(255, 189, 220);
+  padding: 5px;
 }
 #exit1:hover, #exit2:hover, #exit3:hover, #exit4:hover, #exit5:hover, #exit6:hover{
   background-color: rgb(255, 100, 100);
 }
 #previous{
-  border: 3px dotted rgb(0, 247, 255);
+  border: 3px dotted rgb(42, 184, 189);
   border-radius: 10px;
   background-color: rgb(208, 252, 255);
   padding: 8px;
   position: absolute;
-  top: 250px;
-  left: 80px;
+  top: 510px;
+  left: 120px;
   font-family: Pangolin;
+  font-size: 16px;
 }
 #next{
-  border: 3px dotted rgb(0, 247, 255);
+  border: 3px dotted rgb(42, 184, 189);
   border-radius: 10px;
   background-color: rgb(208, 252, 255);
   padding: 8px;
   position: absolute;
-  top: 250px;
-  left: 170px;
+  top: 510px;
+  left: 210px;
   font-family: Pangolin;
+  font-size: 16px;
+}
+
+/*Click on extra photos lines*/
+#info{
+  font-size: 17px;
+  font-family: Pangolin;
+  border: none;
+  position: absolute;
+  top: 460px;
+  left: 120px;
+  width: 200px;
+  padding:0px;
+  color: rgb(218, 42, 72);
+}
+#info2{
+  font-size: 17px;
+  font-family: Pangolin;
+  border: none;
+  position: absolute;
+  top: 410px;
+  left: 120px;
+  width: 200px;
+  padding:0px;
+  color: rgb(218, 42, 72);
 }
 #previous:hover{
   background-color: gray;
@@ -222,25 +309,28 @@ article img{
   background-color: gray;
   color: white;
 }
+
 #previous2{
-  border: 3px dotted rgb(0, 247, 255);
+  border: 3px dotted rgb(72, 41, 128);
   border-radius: 10px;
-  background-color: rgb(208, 252, 255);
+  background-color: rgb(222, 208, 255);
   padding: 8px;
   position: absolute;
-  top: 250px;
-  left: 80px;
+  top: 460px;
+  left: 120px;
   font-family: Pangolin;
+  font-size: 16px;
 }
 #next2{
-  border: 3px dotted rgb(0, 247, 255);
+  border: 3px dotted rgb(72, 41, 128);
   border-radius: 10px;
-  background-color: rgb(208, 252, 255);
+  background-color: rgb(222, 208, 255);
   padding: 8px;
   position: absolute;
-  top: 250px;
-  left: 170px;
+  top: 460px;
+  left: 210px;
   font-family: Pangolin;
+  font-size: 16px;
 }
 #previous2:hover{
   background-color: gray;
